# agent_mono

./: .dockerignore  .gitignore  AGENTS.md  AGENT_CAPABILITIES.md  AGENT_CAPABILITIES.zh-CN.md  CLAUDE.en.md  CLAUDE.md  JWT_GUARD_SCOPE.zh-CN.md  Makefile  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.claude/agents/: trellis-doc-fix.md  trellis-doc-review.md
.cursor/: mcp.json
.cursor/agents/: trellis-doc-fix.md  (+1 more)
.trellis/: .template-hashes.json  config.yaml
backend/agent-backend-python/: README.md  README.zh-CN.md  pyproject.toml
backend/agent-backend-python/app/: config.py  db_models.py  deps.py  exceptions.py  main.py  middleware.py  models.py  orm_memory.py
backend/agent-backend-python/app/auth/: router.py  service.py
backend/agent-backend-python/app/routers/: agent.py  attachments.py  health.py  mcp.py  memory.py  model_configs.py  providers.py  skills.py  subagent.py  threads.py
backend/agent-backend-python/tests/: test_agent_core.py  test_health.py
backend/rag-python-service/: ARCHITECTURE.md  LIFESPAN.md  README.md  UPLOAD_TASK_FLOW.md  pyproject.toml
backend/rag-python-service/app/: __init__.py  config.py  main.py  models.py  responses.py
backend/rag-python-service/app/persistence/: __init__.py  session.py
backend/rag-python-service/app/repositories/: __init__.py  attachment_repository.py  model_config_repository.py
backend/rag-python-service/app/routers/: health.py  rag.py
backend/rag-python-service/app/services/: rag_service.py
backend/rag-python-service/tests/: test_health.py  test_rag_routes.py  test_rag_service_model_config.py
core/agent-core-python/: README.md  README.zh-CN.md  pyproject.toml
core/agent-core-python/agent_core/: __init__.py  checkpointer.py  mcp.py  memory.py  providers.py  runtime.py  skills.py  tools.py  types.py
docs/: _meta.json  _nav.json  attachment-rag-issues.md  document-parsing-comparison.md  index.md  langgraph-checkpointer.zh-CN.md  llamaindex-ts-vs-python.md  package.json  python-microservice-architecture.md  rag-integration-plan.md  rspress.config.ts  streaming-architecture.md  tsconfig.json
infra/: Dockerfile.api  Dockerfile.rag  Dockerfile.web  docker-compose.yml  entrypoint-api.sh
(+212 files in other folders)
