[project]
name = "agent-backend-python"
version = "0.2.0"
description = "Python agent backend for intelligentAgent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.32.0,<1.0.0",
  "redis>=5.2.0,<6.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "sqlalchemy>=2.0.44,<3.0.0",
  "intelligent-agent-core-python"
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv.sources]
intelligent-agent-core-python = { path = "../../core/agent-core-python", editable = true }
