[project]
name = "rag-python-service"
version = "0.1.0"
description = "Standalone Python RAG microservice for tangAgent using LlamaIndex and pgvector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.32.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "llama-index-core>=0.12.0,<0.13.0",
  "llama-index-vector-stores-postgres>=0.4.0,<0.5.0",
  "llama-index-embeddings-openai>=0.3.0,<0.4.0",
  "llama-index-llms-openai>=0.4.0,<0.5.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "httpx>=0.28.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
