[project]
name = "tang-agent-core-python"
version = "0.1.0"
description = "Shared Python agent core for tangAgent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.30.0,<1.0.0",
  "langchain>=0.3.0,<0.4.0",
  "langgraph>=0.2.0,<0.4.0",
  "langgraph-checkpoint-postgres>=2.0.0,<3.0.0",
  "langchain-mcp-adapters>=0.1.7,<0.2.0",
  "langchain-openai>=0.2.0,<0.4.0",
  "langchain-anthropic>=0.2.0,<0.4.0",
  "langchain-google-genai>=2.0.0,<3.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pyyaml>=6.0.2,<7.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_core"]
